--- a/index.html
+++ b/index.html
@@ -11,21 +11,22 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
-    <div class="navbar navbar-expand-lg navbar-dark bg-dark">
+<body class="d-flex flex-column">
 
+    <div class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-
             <a class="navbar-brand" href="#">Johan Bermeo</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02"
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            
-            <div class="collapse navbar-collapse float-right" id="navbarNavDropdown">
-                <ul class="navbar-nav ml-auto">
+
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html">About me</a>
+                        <a class="nav-link" href="index.html">About me
+                            <span class="sr-only">(current)</span>
+                        </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="portfolio.html">Portfolio</a>
@@ -38,9 +39,65 @@
         </div>
     </div>
 
-    <div class="container">
-
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="display-4 text-light text-right mt-4">Get in touch</h1>
+            <a class="btn btn-danger btn-lg float-right mb-4" href="contact.html" role="button">Contact me now</a>
+        </div>
     </div>
+
+    <div class="container my-4">
+
+        <div class="row">
+
+            <div class="col-xl-3 col-md-3 col-sm-12 col-xs-12 pb-4">
+                <img src="images/profileMid.jpg" class="img-fluid" alt="Profile Image">
+            </div>
+
+            <div class="col-xl-9 col-md-9 col-sm-12 col-xs-12">
+                <h4>Who am I?</h4>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur, porro enim quos quae tenetur quisquam
+                    vero pariatur consequuntur necessitatibus totam culpa adipisci blanditiis nostrum eos, expedita nisi
+                    quidem quas! Culpa!</p>
+                <h4>Something</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime quidem expedita itaque voluptatum pariatur
+                    optio fugit sit iste aspernatur aut distinctio velit delectus saepe, ad voluptate iure soluta molestiae
+                    assumenda?
+                </p>
+                <h4>Something else</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo et, illum eaque cum distinctio deserunt dolorum,
+                    magnam aut fugit nobis id? Alias perspiciatis incidunt, laudantium laborum delectus doloribus aliquam
+                    libero!
+                </p>
+                <h4>More</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas impedit cum iure atque voluptatum ab velit
+                    placeat exercitationem commodi assumenda iste mollitia, omnis recusandae maxime, aliquam labore est veritatis
+                    aliquid.
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <footer class="bg-dark text-light mt-auto">
+        <div class="container py-3">
+            <div class="row">
+                <div class="col-12 clarfix">
+                    <span class="text-right">Copyright.</span>
+                    <div class="float-right">
+                        <a href="#">
+                            <img src="images/icons/linkedin.svg" class="img-fluid" width="30px" alt="Linkedin">
+                        </a>
+                        <a href="#" class="pl-2">
+                            <img src="images/icons/instagram.svg" class="img-fluid" width="30px" alt="Linkedin">
+                        </a>
+                        <a href="#" class="pl-2">
+                            <img src="images/icons/facebook.svg" class="img-fluid" width="30px" alt="Linkedin">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
