--- a/portfolio.html
+++ b/portfolio.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
-    <div class="navbar navbar-expand-lg navbar-dark bg-dark">
+<body class="d-flex flex-column">
+    <div class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
 
         <div class="container">
 
@@ -21,7 +21,7 @@
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            
+
             <div class="collapse navbar-collapse float-right" id="navbarNavDropdown">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
@@ -38,9 +38,53 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container my-4">
+
+        <div class="row">
+
+            <div class="col-xl-3 col-md-4 col-sm-6 col-xs-12 pt-3">
+                <img src="images/portfolio/img1.jpg" class="rounded img-fluid" alt="Portfolio Image">
+            </div>
+
+            <div class="col-xl-3 col-md-4 col-sm-6 col-xs-12 pt-3">
+                <img src="images/portfolio/img2.jpg" class="rounded img-fluid" alt="Portfolio Image">
+            </div>
+
+            <div class="col-xl-3 col-md-4 col-sm-6 col-xs-12 pt-3">
+                <img src="images/portfolio/img3.jpg" class=" rounded img-fluid" alt="Portfolio Image">
+            </div>
+
+            <div class="col-xl-3 col-md-4 col-sm-6 col-xs-12 pt-3">
+                <img src="images/portfolio/img4.jpg" class="rounded img-fluid" alt="Portfolio Image">
+            </div>
+
+            <div class="col-xl-3 col-md-4 col-sm-6 col-xs-12 pt-3">
+                <img src="images/portfolio/img5.jpg" class="rounded img-fluid" alt="Portfolio Image">
+            </div>
+        </div>
 
     </div>
+
+    <footer class="bg-dark text-light mt-auto">
+        <div class="container py-3">
+            <div class="row">
+                <div class="col-12 clarfix">
+                    <span class="text-right">Copyright.</span>
+                    <div class="float-right">
+                        <a href="#">
+                            <img src="images/icons/linkedin.svg" class="img-fluid" width="30px" alt="Linkedin">
+                        </a>
+                        <a href="#" class="pl-2">
+                            <img src="images/icons/instagram.svg" class="img-fluid" width="30px" alt="Linkedin">
+                        </a>
+                        <a href="#" class="pl-2">
+                            <img src="images/icons/facebook.svg" class="img-fluid" width="30px" alt="Linkedin">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
