--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
         <div class="row">
 
             <div class="col-xl-3 col-md-4 col-sm-6 col-xs-12 pt-3">
-                <img src="images/portfolio/img1.jpg" class="rounded img-fluid" alt="Portfolio Image">
+                <a href=""><img src="images/portfolio/giftastic.jpg" class="rounded img-fluid" alt="Portfolio Image"></a>
             </div>
 
             <div class="col-xl-3 col-md-4 col-sm-6 col-xs-12 pt-3">
