--- a/portfolio.html
+++ b/portfolio.html
@@ -49,23 +49,58 @@
         <div class="row">
 
             <div class="col-xl-3 col-md-4 col-sm-6 col-xs-12 pt-3">
-                <a href=""><img src="images/portfolio/giftastic.jpg" class="rounded img-fluid" alt="Portfolio Image"></a>
+                <div class="card">
+                    <img src="images/portfolio/giftastic.jpg" class="card-img-top" alt="Portfolio Image">
+                    <div class="card-body">
+                        <h5 class="card-title">Giftoon</h5>
+                        <p class="card-text">Website using Giphy API to creater and display gifs.</p>
+                        <a href="https://sonjohan.github.io/GifTastic/" class="btn btn-primary">Visit</a>
+                    </div>
+                </div>
             </div>
 
             <div class="col-xl-3 col-md-4 col-sm-6 col-xs-12 pt-3">
-                <img src="images/portfolio/img2.jpg" class="rounded img-fluid" alt="Portfolio Image">
+                <div class="card">
+                    <img src="images/portfolio/hangman.jpg" class="card-img-top" alt="Portfolio Image">
+                    <div class="card-body">
+                        <h5 class="card-title">Hangman</h5>
+                        <p class="card-text">The Hangman Game, enjoy.</p>
+                        <a href="https://sonjohan.github.io/Word-Guess-Game/" class="btn btn-primary">Play Now</a>
+                    </div>
+                </div>
             </div>
 
             <div class="col-xl-3 col-md-4 col-sm-6 col-xs-12 pt-3">
-                <img src="images/portfolio/img3.jpg" class=" rounded img-fluid" alt="Portfolio Image">
+                <div class="card">
+                    <img src="images/portfolio/trivia.jpg" class="card-img-top" alt="Portfolio Image">
+                    <div class="card-body">
+                        <h5 class="card-title">Start Wars Trivia</h5>
+                        <p class="card-text">A fun startwas trivia.</p>
+                        <a href="https://sonjohan.github.io/TriviaGame/" class="btn btn-primary">Play Now</a>
+                    </div>
+                </div>
             </div>
 
             <div class="col-xl-3 col-md-4 col-sm-6 col-xs-12 pt-3">
-                <img src="images/portfolio/img4.jpg" class="rounded img-fluid" alt="Portfolio Image">
+                <div class="card">
+                    <img src="images/portfolio/crystal.jpg" class="card-img-top" alt="Portfolio Image">
+                    <div class="card-body">
+                        <h5 class="card-title">Crystal Collector</h5>
+                        <p class="card-text">Do your Math.randon and enjoy another game!.</p>
+                        <a href="https://sonjohan.github.io/CrystalsCollector-Game/" class="btn btn-primary">Play Now</a>
+                    </div>
+                </div>
             </div>
 
             <div class="col-xl-3 col-md-4 col-sm-6 col-xs-12 pt-3">
-                <img src="images/portfolio/img5.jpg" class="rounded img-fluid" alt="Portfolio Image">
+                <div class="card">
+                    <img src="images/portfolio/travelPanda.jpg" class="card-img-top" alt="Portfolio Image">
+                    <div class="card-body">
+                        <h5 class="card-title">Travel Panda</h5>
+                        <p class="card-text">A fun app to improve your trips, get the weather and things to do.</p>
+                        <a href="https://sonjohan.github.io/TravelPandaJohan/" class="btn btn-primary">Explore</a>
+                    </div>
+                </div>
             </div>
         </div>
 
