--- a/portfolio.html
+++ b/portfolio.html
@@ -102,6 +102,28 @@
                     </div>
                 </div>
             </div>
+
+            <div class="col-xl-3 col-md-4 col-sm-6 col-xs-12 pt-3">
+                <div class="card">
+                    <img src="images/portfolio/burguer..jpg" class="card-img-top" alt="Portfolio Image">
+                    <div class="card-body">
+                        <h5 class="card-title">Eat Da Burguer</h5>
+                        <p class="card-text">Restaurant app that lets users input the names of burgers they'd like to eat.</p>
+                        <a href="https://sonjohan.github.io/TravelPandaJohan/" class="btn btn-primary">Explore</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-xl-3 col-md-4 col-sm-6 col-xs-12 pt-3">
+                <div class="card">
+                    <img src="images/portfolio/burguer..jpg" class="card-img-top" alt="Portfolio Image">
+                    <div class="card-body">
+                        <h5 class="card-title">News Scrapper</h5>
+                        <p class="card-text">App that lets users view and leave comments on the latest news.</p>
+                        <a href="https://sonjohan.github.io/TravelPandaJohan/" class="btn btn-primary">Visit</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </div>
