--- a/portfolio.html
+++ b/portfolio.html
@@ -105,7 +105,7 @@
 
             <div class="col-xl-3 col-md-4 col-sm-6 col-xs-12 pt-3">
                 <div class="card">
-                    <img src="images/portfolio/burguer.jpg" class="card-img-top" alt="Portfolio Image">
+                    <img src="images/portfolio/burguer..jpg" class="card-img-top" alt="Portfolio Image">
                     <div class="card-body">
                         <h5 class="card-title">Eat Da Burguer</h5>
                         <p class="card-text">Restaurant app that lets users input the names of burgers they'd like to eat.</p>
